Initial SoC and board support for Hifive Unleashed
Signed-off-by: Manivannan Sadhasivam <manivannanece23@gmail.com>

--- a/arch/riscv/Kconfig
+++ b/arch/riscv/Kconfig
@@ -14,10 +14,14 @@ config TARGET_AX25_AE350
 config TARGET_QEMU_VIRT
 	bool "Support QEMU Virt Board"
 
+config TARGET_U540_C000
+	bool "Support ux540-c000"
+
 endchoice
 
 source "board/AndesTech/ax25-ae350/Kconfig"
 source "board/emulation/qemu-riscv/Kconfig"
+source "board/sifive/u540-c000/Kconfig"
 
 choice
 	prompt "CPU selection"
